--- a/ERG3010 website/1/untitled1/templates/home.html
+++ b/ERG3010 website/1/untitled1/templates/home.html
@@ -30,10 +30,7 @@
                 <a class="nav-link" href="#">Our intersting findings</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="index.html">database search</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="student_info.html">students information</a>
+                <a class="nav-link" href="{{ url_for('index') }}">database search</a>
             </li>
             </ul>
         </div>
