--- a/ERG3010 website/1/untitled1/templates/index.html
+++ b/ERG3010 website/1/untitled1/templates/index.html
@@ -17,16 +17,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
             <li class="nav-item ">
-                <a class="nav-link" href="home.html">Home </a>
+                <a class="nav-link" href="{{ url_for('home') }}" >Home </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Our intersting findings</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="..\templates\search.html">database search<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link" href="..\templates\student_info.html">students information</a>
+                <a class="nav-link" href="#">database search<span class="sr-only">(current)</span></a>
             </li>
             </ul>
         </div>
