--- a/ERG3010 website/1/untitled1/templates/view.html
+++ b/ERG3010 website/1/untitled1/templates/view.html
@@ -27,6 +27,9 @@
             <li class="nav-item ">
                 <a class="nav-link" href="{{ url_for('index') }}">database search</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('info') }}">student_infomation</a>
+            </li>
             </ul>
         </div>
     </nav> 
