--- a/ERG3010 website/1/untitled1/templates/index.html
+++ b/ERG3010 website/1/untitled1/templates/index.html
@@ -45,6 +45,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="#">database search<span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('info') }}">student_infomation</a>
+            </li>
             </ul>
         </div>
     </nav>
