--- a/ERG3010 website/1/untitled1/templates/home.html
+++ b/ERG3010 website/1/untitled1/templates/home.html
@@ -17,7 +17,7 @@
 
     <nav height="80px"   class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark" >
         
-        <a class="navbar-brand" href="#"> <img src="static\logo.jfif" width="30" height="30" class="d-inline-block align-top" alt="">  ERG3010 project </a>
+        <a class="navbar-brand" href="#"> <img src="..\static\logo.jfif" width="30" height="30" class="d-inline-block align-top" alt="">  ERG3010 project </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
