--- a/ERG3010 website/1/untitled1/templates/info.html
+++ b/ERG3010 website/1/untitled1/templates/info.html
@@ -10,7 +10,7 @@
 <body>
     <nav height="80px"   class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark" >
         
-        <a class="navbar-brand" href="#"> <img src="logo.jfif" width="30" height="30" class="d-inline-block align-top" alt="">  ERG3010 project </a>
+        <a class="navbar-brand" href="#"> <img src="..\static\logo.jfif" width="30" height="30" class="d-inline-block align-top" alt="">  ERG3010 project </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,28 +32,28 @@
         </div>
     </nav>
         <div class="card" style="width: 18rem ;position: fixed; left: 100px; top:100px">
-            <img class="card-img-top" src="static/chelsea.png" alt="Card image cap">
+            <img class="card-img-top" src="..\static\chelsea.png" alt="Card image cap">
             <div class="card-body">
             <h5 class="card-title">张诗琪</h5>
             <h6 class="card-title">118010416</h6>
-            <p class="card-text">question 1 <br> website design</p>
+            <p class="card-text">question 1 <br> website Implement</p>
             <a href="#">118010416@link.cuhk.edu.cn</a>
          </div>
          <div class="card" style="width: 18rem ;position: fixed; left: 450px; top:100px">
-            <img class="card-img-top" src="static/cqddlf.jpg" alt="Card image cap">
+            <img class="card-img-top" src="..\static\cqddlf.jpg" alt="Card image cap">
             <div class="card-body">
             <h5 class="card-title">吴畏</h5>
-            <h6 class="card-title">11801335</h6>
-            <p class="card-text">question 1 <br> </p>
-            <a href="#">118010416@link.cuhk.edu.cn</a>
+            <h6 class="card-title">118010335</h6>
+            <p class="card-text">ERD design <br> question 3 <br> </p>
+            <a href="">118010335@link.cuhk.edu.cn</a>
          </div>
          <div class="card" style="width: 18rem ;position: fixed; left: 800px; top:100px">
-            <img class="card-img-top" src="chelsea.png" alt="Card image cap">
+            <img class="card-img-top" src=" " alt="Card image cap">
             <div class="card-body">
             <h5 class="card-title">马浩天</h5>
             <h6 class="card-title">118010220</h6>
-            <p class="card-text"><br> Question 2</p>
-            <a href="#">118010xxx@link.cuhk.edu.cn</a>
+            <p class="card-text"><br> Question 2 <br>Question3</p>
+            <a href="#">118010220@link.cuhk.edu.cn</a>
          </div>
          <div class="card" style="width: 18rem ;position: fixed; left: 1150px; top:100px">
             <img class="card-img-top" src="chelsea.png" alt="Card image cap">
@@ -61,7 +61,7 @@
             <h5 class="card-title">毛宇</h5>
             <h6 class="card-title">118010224</h6>
             <p class="card-text"> <br> website design</p>
-            <a href="#">118010xxx@link.cuhk.edu.cn</a>
+            <a href="#">118010224@link.cuhk.edu.cn</a>
          </div>
 </div>
 </body>
