--- a/ERG3010 website/1/untitled1/templates/info.html
+++ b/ERG3010 website/1/untitled1/templates/info.html
@@ -48,7 +48,7 @@
             <a href="">118010335@link.cuhk.edu.cn</a>
          </div>
          <div class="card" style="width: 18rem ;position: fixed; left: 800px; top:100px">
-            <img class="card-img-top" src=" " alt="Card image cap">
+            <img class="card-img-top" src="..\static\mht.jpg" alt="Card image cap">
             <div class="card-body">
             <h5 class="card-title">马浩天</h5>
             <h6 class="card-title">118010220</h6>
@@ -56,7 +56,7 @@
             <a href="#">118010220@link.cuhk.edu.cn</a>
          </div>
          <div class="card" style="width: 18rem ;position: fixed; left: 1150px; top:100px">
-            <img class="card-img-top" src="chelsea.png" alt="Card image cap">
+            <img class="card-img-top" src="..\static\my.jpg" alt="Card image cap">
             <div class="card-body">
             <h5 class="card-title">毛宇</h5>
             <h6 class="card-title">118010224</h6>
